$Id: CHANGES,v 1.194 2002/09/02 12:20:26 stelian Exp $

Changes between versions 0.4b31 and 0.4b32 (released ?????????????)
===================================================================

1.	Changed dump to use fcntl(F_SETLK) style locking instead
	of flock() when locking the dumpdates file. With the old 
	locking scheme, a local user having read rights on the 
	dumpdates file could be able to do a Denial of Service attack
	on dump. In order to lock the dumpdates file with the new
	scheme, the user would need to have write access on the file.
	Thanks to Richard Johnson <Richard.Johnson3@ey.com> for 
	reporting the bug (originally a bugtraq post).

2.	Fixed interactive 'ls' which caused spurious errors warnings
	about 'undefined filetypes' detected. Thanks to Jorgen Ostling 
	<jorgen_ostling@users.sourceforge.net> for reporting this 
	bug.

3.	Fixed dump's estimate when dealing with sparse inodes.

Changes between versions 0.4b30 and 0.4b31 (released July 30, 2002)
===================================================================

1.	Fixed rmt open flags transmission (GNU's symbolic syntax over
	rmt) which I broke in 0.4b29. Thanks to Eros Albertazzi
	<eros@lamel.bo.cnr.it> for reporting the bug.

Changes between versions 0.4b29 and 0.4b30 (released July 25, 2002)
===================================================================

1.	Made dump print out the ext2 logical block number in case of a read
	error, which can be given as an argument to debugfs' ncheck command,
	in order to find out the affected inode. Added note about this 
	usage in dump's man page.

2.	Fixed a problem in restore when reading tapes written on big
	endian machines with very old versions of dump. The patch was
	contributed by George Helffrich <george@geology.bristol.ac.uk>.

3.	Fixed the tape length calculation when using large tapes
	and compression. Thanks to Georg Lippold 
	<g_lippold@sourceforge.net> for reporting the bug.
