@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.194 2002/09/02 12:20:26 stelian Exp $
+$Id: CHANGES,v 1.195 2002/09/02 12:43:12 stelian Exp $
 
 Changes between versions 0.4b31 and 0.4b32 (released ?????????????)
 ===================================================================
@@ -18,6 +18,11 @@ Changes between versions 0.4b31 and 0.4b32 (released ?????????????)
 	bug.
 
 3.	Fixed dump's estimate when dealing with sparse inodes.
+
+4.	Modified dump to allow setting a blocksize bigger than 32kB
+	(raised the limit to 1024kB), because newer hardware needs
+	this for proper operation. Thanks to Dirk Traenapp
+	<dtraenapp@users.sourceforge.net> for reporting this.
 
 Changes between versions 0.4b30 and 0.4b31 (released July 30, 2002)
 ===================================================================
